# threexui-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-27-threexui-rs-implementation.md
docs/superpowers/specs/: 2026-04-27-threexui-rs-design.md
examples/: add_client.rs  list_inbounds.rs  live_test.rs  proxy_test.rs  scenarios.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/api/: custom_geo.rs  inbounds.rs  mod.rs  server.rs  settings.rs  xray.rs
src/models/: common.rs  custom_geo.rs  inbound.rs  mod.rs  server.rs  settings.rs  xray.rs
tests/: serde_robustness.rs
