[package]
name = "threexui-rs"
version = "2.9.3"
edition = "2021"
rust-version = "1.75"
description = "Async Rust SDK for the 3x-ui panel API (targets 3x-ui v2.9.3)"
license = "MIT"
repository = "https://github.com/YOUR_GITHUB_USERNAME/3x-ui-rs"
keywords = ["3x-ui", "xray", "vpn", "proxy", "api-client"]
categories = ["api-bindings", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/threexui-rs"
exclude = ["/docs", "/.github"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
